Ensured nav menu is hidden off screen

--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -31,8 +31,6 @@ html {
 }
 
 body {
-  // background-color: vars.$cl-primary;
-  background-color: blue;
   color: vars.$cl-secondary;
 }
 
@@ -46,6 +44,8 @@ body {
   font-family: vars.$ff-primary;
   background-repeat: no-repeat;
   background-size: cover;
+  overflow-x: hidden;
+  position: relative;
 
   &.home {
     background-image: url("../images/home/background-home-mobile.jpg");
