--- a/src/assets/scss/_navigation.scss
+++ b/src/assets/scss/_navigation.scss
@@ -1,6 +1,4 @@
 .nav {
-    overflow: hidden; // nav can still be scrolled to
-
     &__btn,
     &__list {
         top: 0;
